[package]
name = "lobo"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/elarasuz/lobo"
repository = "https://github.com/elarasuz/lobo"
keywords = ["mqtt", "archive", "storage", "s3", "gcs"]
description = "wolf pack services"

[dependencies]
log = "0.4"
env_logger = "0.10"
config = "0.13"
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
rumqttc = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
file-rotate = "0.7.5"
chrono = "0.4.26"
# archive to s3 compatible 
opendal = "0.39"

[profile.release]
opt-level = 'z' # optimize for size
lto = true
codegen-units = 1
strip = "debuginfo"
